# celeste

./: .gitignore  .gitmodules  BUILDING.md  CHANGELOG.md  Cargo.toml  PRIVACY.md  README.md  build.rs  justfile  renovate.json  style.css
.drone/: drone.jsonnet
.drone/scripts/: create-release.sh  install-pkgbuild-deps.sh  publish-mpr.sh  run-tests.sh  setup-pbmpr.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: deploy.yml  test.yml
appimage/: AppImageBuilder.yml  wrapper.sh
assets/: com.hunterwittenborn.Celeste.desktop  com.hunterwittenborn.Celeste.metainfo.xml  style.scss
celeste/: Cargo.toml  build.rs
celeste-tray/: Cargo.toml
celeste-tray/src/: main.rs
celeste/src/: about.rs  gtk_util.rs  launch.rs  main.rs  mpsc.rs  rclone.rs  style.css  style.scss
celeste/src/entities/: sync_dirs.rs
celeste/src/login/: dropbox.rs  gdrive.rs  login_util.rs  mod.rs  onedrive.rs  pcloud.rs  proton_drive.rs  webdav.rs
celeste/src/migrations/: mod.rs
libceleste/: Cargo.toml
libceleste/src/: lib.rs
makedeb/: PKGBUILD
po/: com.hunterwittenborn.Celeste.pot  de.po  el.po  es.po  eu.po  fi.po  fr.po  gl.po  hi.po  hu.po  it.po  nb_NO.po  nl.po  nn.po  pl.po  pt_BR.po  ro.po  ru.po  sv.po  tr.po  uk.po  zh_Hant.po
snap/: snapcraft.yaml
src/: about.rs  config.rs  gtk_util.rs  launch-old.rs  launch.rs  login.rs  main.rs  rclone.rs  traits.rs  tray.rs  util.rs
src-old/: about.rs  gtk_util.rs  launch.rs  mpsc.rs  rclone.rs  util.rs
src-old/entities/: remotes.rs
src-old/html/: auth-template.go.html
src-old/login/: gdrive.rs  mod.rs  nextcloud.rs
src-old/login-old/: login_util.rs  mod.rs  owncloud.rs  pcloud.rs  webdav.rs
src/entities/: mod.rs  sync_dirs.rs  sync_items.rs
src/html/: auth-template.go.html  google-drive.tera.html
src/login/: dropbox.rs  gdrive.rs  login_util.rs  mod.rs  nextcloud.rs  onedrive.rs  owncloud.rs  webdav.rs
src/login-old/: dropbox.rs  gdrive.rs  proton_drive.rs
src/migrations/: m20220101_000001_create_table.rs  m20230207_204909_sync_dirs_remove_slash_suffix.rs  m20230220_215840_remote_sync_items_fix.rs  mod.rs
