[package]
name = "celeste"
version = "0.8.1"
edition = "2021"

[dependencies]
adw = { package = "libadwaita", version = "0.2.1", features = ["v1_2"] }
base64 = "0.20.0"
blocking = "1.3.0"
clap = { version = "4.0.12", features = ["derive", "env"] }
file-lock = "2.1.6"
futures = "0.3.25"
glib = "0.16.7"
glob = "0.3.0"
hw-msg = "0.3.1"
indexmap = "1.9.2"
ksni = "0.2.1"
lazy_static = "1.4.0"
librclone = { version = "0.6.0" }
nix = "0.26.2"
rand = "0.8.5"
regex = "1.6.0"
rocket = "0.5.0-rc.2"
sea-orm = { version = "0.10.3", features = ["sqlx-sqlite", "runtime-async-std-rustls", "macros"] }
sea-orm-migration = "0.10.0"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
tempfile = "3.3.0"
tera = "1.17.1"
time = { version = "0.3.17", features = ["serde-well-known"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "sync"] }
toml_edit = { version = "0.14.4", features = ["serde"] }
tr = "0.1.6"
url = "2.3.1"

[build-dependencies]
grass = "0.11.2"
nipper = "0.1.9"