[package]
name = "celeste"
version = "0.8.1"
edition = "2021"

[dependencies]
adw = { package = "libadwaita", version = "0.6.0", features = ["v1_2"] }
base64 = "0.22.0"
blocking = "1.5.1"
clap = { version = "4.5.4", features = ["derive", "env"] }
file-lock = "2.1.11"
futures = "0.3.30"
glib = "0.19.3"
glob = "0.3.1"
hw-msg = "0.4.1"
indexmap = "2.2.6"
ksni = "0.2.1"
lazy_static = "1.4.0"
librclone = { version = "0.7.0" }
nix = "0.28.0"
rand = "0.8.5"
regex = "1.10.4"
rocket = "0.5.0"
sea-orm = { version = "0.12.15", features = ["sqlx-sqlite", "runtime-async-std-rustls", "macros"] }
sea-orm-migration = "0.12.15"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tempfile = "3.10.1"
tera = "1.19.1"
time = { version = "0.3.34", features = ["serde-well-known"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "sync"] }
toml_edit = { version = "0.22.9", features = ["serde"] }
tr = "0.1.7"
url = "2.5.0"

[build-dependencies]
grass = "0.13.2"
nipper = "0.1.9"