[package]
name = "celeste"
version = "0.8.3"
edition = "2021"

[dependencies]
adw = { package = "libadwaita", version = "0.6.0", features = ["v1_2"] }
base64 = "0.22.0"
blocking = "1.6.1"
clap = { version = "4.5.7", features = ["derive", "env"] }
file-lock = "2.1.11"
futures = "0.3.30"
glib = "0.19.0"
glob = "0.3.1"
hw-msg = "0.4.0"
indexmap = "2.0.0"
ksni = "0.2.2"
lazy_static = "1.4.0"
librclone = { version = "0.8.0" }
nix = "0.29.0"
rand = "0.8.5"
regex = "1.10.5"
rocket = "0.5.1"
sea-orm = { version = "0.12.0", features = ["sqlx-sqlite", "runtime-async-std-rustls", "macros"] }
sea-orm-migration = "0.12.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tempfile = "3.10.1"
tera = "1.20.0"
time = { version = "0.3.36", features = ["serde-well-known"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread", "sync"] }
toml_edit = { version = "0.22.0", features = ["serde"] }
tr = "0.1.7"
url = "2.5.2"

[build-dependencies]
grass = "0.13.0"
nipper = "0.1.9"
